[gd_scene load_steps=2 format=3 uid="uid://cwj4n2w8yc3k5"]

[ext_resource type="Script" path="res://scripts/ui/plot_tile.gd" id="1_5h2m3"]

[node name="PlotTile" type="Node2D"]
z_index = 1
script = ExtResource("1_5h2m3")

[node name="GroundPolygon" type="Polygon2D" parent="."]
z_index = 1
color = Color(0.6, 0.5, 0.3, 1)
antialiased = true

[node name="DepthPolygon" type="Polygon2D" parent="."]
z_index = 0
color = Color(0.4, 0.3, 0.2, 1)
antialiased = true

[node name="LeftDepthPolygon" type="Polygon2D" parent="."]
z_index = 0
color = Color(0.35, 0.25, 0.15, 1)
antialiased = true

[node name="DepthBorderLine" type="Line2D" parent="."]
z_index = 2
width = 1.5
default_color = Color(0.3, 0.3, 0.3, 1)
antialiased = true

[node name="BorderLine" type="Line2D" parent="."]
z_index = 2
width = 1.5
default_color = Color(0.3, 0.3, 0.3, 1)
antialiased = true

[node name="OwnerFlag" type="Sprite2D" parent="."]
visible = false
z_index = 3
position = Vector2(0, -40)

[node name="Area2D" type="Area2D" parent="."]
input_pickable = true
monitorable = false
monitoring = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
